--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 
-<body class="bg-light" style="min-height: 8000px;">
+<body class="bg-light">
 
     <div class="container">
         <div class="py-5 text-center">
